Fixed Safari layout issue.

--- a/components/product-grid/product-grid.scss
+++ b/components/product-grid/product-grid.scss
@@ -183,7 +183,6 @@
 .productsContainer{
 	display: flex;
 	flex-wrap: wrap;
-	margin: 0 -8px;
 
 	.product {
 		flex-basis: calc(25% - 16px);
